--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -49,11 +49,12 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=ref,event=branch
             type=semver,pattern={{raw}}
             type=semver,pattern=v{{major}}.{{minor}}
             type=semver,pattern=v{{major}}
           flavor: |
-            latest=auto
+            latest=true
 
       - name: Build and push Docker image
         id: build-and-push
